<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aart"
    tools:context=".forget_password">


    <EditText
        android:id="@+id/email_conf"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/submitbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="307dp"
        android:layout_height="63dp"
        android:layout_marginBottom="216dp"
        android:background="@drawable/but"
        android:fontFamily="@font/normal"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/normal"
        android:text="@string/forgetpasword"
        android:textColor="@color/white"

        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/text"
        android:layout_width="315dp"
        android:layout_height="105dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/normal"
        android:text="@string/enter"

        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/email_conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/back_arrow1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bacck"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>