<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aart"
    tools:context=".login">

    <EditText
        android:id="@+id/full_name"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginBottom="364dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:background="@drawable/but"
        android:fontFamily="@font/normal"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/normal"
        android:text="@string/you_are_not_a_member"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/normal"
        android:text="forget password?"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:fontFamily="@font/normal"
        android:text="@string/register"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/normal"
        android:text="@string/hello_there"
        android:textColor="@color/white"
        android:textSize="50sp"

        app:layout_constraintBottom_toTopOf="@+id/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <ImageView
        android:id="@+id/back_arrow1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/bacck"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="45dp" />


</androidx.constraintlayout.widget.ConstraintLayout>