<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aart"
    tools:context=".Signup">

    <EditText
        android:id="@+id/full_name"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />


    <EditText
        android:id="@+id/email_adress"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="212dp"
        android:layout_marginBottom="391dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginBottom="336dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:background="@drawable/but"
        android:fontFamily="@font/normal"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/normal"
        android:text="@string/contact_us"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/normal"
        android:text="@string/join_us"
        android:textColor="@color/white"
        android:textSize="50sp"

        app:layout_constraintBottom_toTopOf="@+id/email_adress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <ImageView
        android:id="@+id/back_arrow1"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="139dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/email_adress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bacck"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/insta_id"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toTopOf="@+id/reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fb_id"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView

        android:id="@+id/fb_id"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/fb"
        app:layout_constraintBottom_toTopOf="@+id/reg"
        app:layout_constraintEnd_toStartOf="@+id/email_id"
        app:layout_constraintStart_toEndOf="@+id/insta_id"
        tools:ignore="MissingConstraints" />

    <ImageView

        android:id="@+id/email_id"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/mg"
        app:layout_constraintBottom_toBottomOf="@+id/fb_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fb_id"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>