<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aart"
    tools:context=".infor">

    <EditText
        android:id="@+id/email_adress1"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginBottom="391dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/first_name1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/prenomm"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/last_name1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toEndOf="@+id/email_adress1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/full_name"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:inputType="textPersonName"
        android:text="@string/_2131"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_adress1"
        app:layout_constraintVertical_bias="0.965" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/phone_number1"
        android:inputType="text"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/full_name"
        app:layout_constraintTop_toBottomOf="@+id/prenomm"
        app:layout_constraintVertical_bias="0.965"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/flag"
        android:layout_width="19dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/full_name"
        app:layout_constraintEnd_toEndOf="@+id/full_name"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toEndOf="@+id/full_name"
        app:layout_constraintStart_toStartOf="@+id/full_name"
        app:layout_constraintTop_toTopOf="@+id/full_name"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/alg"
        tools:ignore="MissingConstraints" />


    <AutoCompleteTextView
        android:id="@+id/Wilaya"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:background="@drawable/input_field"
        android:completionHint="Select a wilaya"
        android:completionThreshold="1"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/wilaya1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/reg"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.065"
        tools:layout_editor_absoluteX="20dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/adresse"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/addresse1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wilaya" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:background="@drawable/but"
        android:fontFamily="@font/normal"
        android:text="@string/login1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresse"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/normal"
        android:text="@string/contact_us"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/normal"
        android:text="@string/join_us"
        android:textColor="@color/white"
        android:textSize="50sp"

        app:layout_constraintBottom_toTopOf="@+id/email_adress1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <ImageView
        android:id="@+id/back_arrow1"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="139dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/email_adress1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bacck"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />


    <ImageView

        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:layout_marginTop="660dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/fb"
        app:layout_constraintBottom_toTopOf="@+id/reg"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView

        android:id="@+id/imageView5"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/mg"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>