<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/article1"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/white_rectangle_background"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:ignore="MissingConstraints"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yo">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/white_rectangle_background"
            android:layout_marginTop="200dp"
            >
            <TextView
                android:id="@+id/textt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:text="@string/textview"
                android:textSize="18sp"
                android:layout_marginStart="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prixxx"
                android:text="@string/prix"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="300dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp" />

        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>